--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <div class="form-group">
                     <label for="message">Message:</label>
                     <textarea name="message" id="" cols="30" rows="10"></textarea>
+                    <button class="sub-btn">Submit</button>
                 </div>
             </form>
         </div>
