--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online Food Delivery</title>
 
+    <link rel="shortcut icon" href="img/fevicon.png">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width:1171px)" href="css/phone.css">
