--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="main">
         <h1>Welcome to My Food Website</h1>
-        <button class="enter-btn"> <a href="index.html"> Enter The Site</a> </button>
+        <button class="enter-btn"> <a href="home.html"> Enter The Site</a> </button>
     </div>
 </body>
 </html>
